refactor controller, service added mapper tests